--- a/da_fcc.ipynb
+++ b/da_fcc.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHBH3tFwrlHGCLmKZVOkXf",
+      "authorship_tag": "ABX9TyOsr3UJcoIJdJezeDUy5Ase",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,10 @@
         "id": "XbMQtiz_jRxH"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "print(\"hello world\")\n",
+        "print(\"test\")\n"
+      ]
     }
   ]
 }
